# django-fastapi-example

./: .env  README.md  pyproject.toml
fapi/: app.py  config.py  database.py  init_db.py  shemas.py
fapi/advert/: model.py  router.py  schemas.py  utils.py
